[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/button-normal.png" type="Texture" id=1]
[ext_resource path="res://UI/button-pressed.png" type="Texture" id=2]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=3]
[ext_resource path="res://UI/LoginScreen.gd" type="Script" id=4]

[node name="LoginScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -90.0
margin_right = 87.0
margin_bottom = 90.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -89.0
margin_right = 75.0
margin_bottom = 86.0
rect_min_size = Vector2( 150, 170 )
rect_clip_content = true
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginScreen" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -81.0
margin_right = 60.0
margin_bottom = 81.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background/LoginScreen"]
margin_right = 120.0
margin_bottom = 14.0
text = "Login Screen"

[node name="MarginContainer" type="MarginContainer" parent="Background/LoginScreen"]
margin_top = 18.0
margin_right = 120.0
margin_bottom = 18.0

[node name="UsernameLabel" type="Label" parent="Background/LoginScreen"]
margin_top = 22.0
margin_right = 120.0
margin_bottom = 36.0
text = "Username :"

[node name="Username" type="LineEdit" parent="Background/LoginScreen"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 64.0

[node name="PasswordLabel" type="Label" parent="Background/LoginScreen"]
margin_top = 68.0
margin_right = 120.0
margin_bottom = 82.0
text = "Password:"

[node name="Password" type="LineEdit" parent="Background/LoginScreen"]
margin_top = 86.0
margin_right = 120.0
margin_bottom = 110.0

[node name="MarginContainer2" type="MarginContainer" parent="Background/LoginScreen"]
margin_top = 114.0
margin_right = 120.0
margin_bottom = 114.0

[node name="LoginButton" type="TextureButton" parent="Background/LoginScreen"]
margin_top = 118.0
margin_right = 120.0
margin_bottom = 138.0
rect_min_size = Vector2( 70, 20 )
size_flags_horizontal = 5
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true

[node name="LoginLabel" type="Label" parent="Background/LoginScreen/LoginButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "Login !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateAccountButton" type="TextureButton" parent="Background/LoginScreen"]
margin_top = 142.0
margin_right = 120.0
margin_bottom = 162.0
rect_min_size = Vector2( 120, 20 )
size_flags_horizontal = 5
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true

[node name="CreateAccountLabel" type="Label" parent="Background/LoginScreen/CreateAccountButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -7.0
margin_right = 48.5
margin_bottom = 7.0
text = "Create Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateAccount" type="VBoxContainer" parent="Background"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -87.5
margin_right = 69.0
margin_bottom = 120.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLabel" type="Label" parent="Background/CreateAccount"]
margin_right = 129.0
margin_bottom = 14.0
text = "email :"

[node name="Username" type="LineEdit" parent="Background/CreateAccount"]
margin_top = 18.0
margin_right = 129.0
margin_bottom = 42.0

[node name="PasswordLabel" type="Label" parent="Background/CreateAccount"]
margin_top = 46.0
margin_right = 129.0
margin_bottom = 60.0
text = "Password:"

[node name="Password" type="LineEdit" parent="Background/CreateAccount"]
margin_top = 64.0
margin_right = 129.0
margin_bottom = 88.0

[node name="PasswordLabel2" type="Label" parent="Background/CreateAccount"]
margin_top = 92.0
margin_right = 129.0
margin_bottom = 106.0
text = "Repeat Password:"

[node name="RepeatPassword" type="LineEdit" parent="Background/CreateAccount"]
margin_top = 110.0
margin_right = 129.0
margin_bottom = 134.0

[node name="MarginContainer2" type="MarginContainer" parent="Background/CreateAccount"]
margin_top = 138.0
margin_right = 129.0
margin_bottom = 138.0

[node name="ConfirmButton" type="TextureButton" parent="Background/CreateAccount"]
margin_top = 142.0
margin_right = 129.0
margin_bottom = 162.0
rect_min_size = Vector2( 70, 20 )
size_flags_horizontal = 5
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true

[node name="ConfirmLabel" type="Label" parent="Background/CreateAccount/ConfirmButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
text = "confirm !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="Background/CreateAccount"]
margin_top = 166.0
margin_right = 129.0
margin_bottom = 186.0
rect_min_size = Vector2( 120, 20 )
size_flags_horizontal = 5
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
expand = true

[node name="BackLabel" type="Label" parent="Background/CreateAccount/BackButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -7.0
margin_right = 48.5
margin_bottom = 7.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Background/LoginScreen/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="Background/LoginScreen/CreateAccountButton" to="." method="_on_CreateAccountButton_pressed"]
[connection signal="pressed" from="Background/CreateAccount/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="Background/CreateAccount/BackButton" to="." method="_on_BackButton_pressed"]
